Fix z-index issues

--- a/src/styles/base/_variables.scss
+++ b/src/styles/base/_variables.scss
@@ -10,3 +10,9 @@ $color-white: #FCFBF8;
 $color-black-transparent: rgba(34, 34, 34, .9);
 
 $base-grid-size: .8rem;
+
+$zindex-checkbox: 1;
+$zindex-highlight: 10;
+$zindex-footer: 20;
+$zindex-overlay: 30;
+$zindex-modal: 100;
