--- a/src/styles/components/_footer.scss
+++ b/src/styles/components/_footer.scss
@@ -2,4 +2,5 @@
     position: fixed;
     right: $base-grid-size;
     bottom: $base-grid-size;
+    z-index: $zindex-footer;
 }
